syntax = "proto3";

message AddUserToGroupResponse {
   bool isPending = 1;
}
