syntax = "proto3";

message InGroup {
   bool inGroup = 1;
}
