syntax = "proto3";

import "Timestamp.proto";

message RemoveUserResponse {
   Timestamp expirationTime = 1;
}
