syntax = "proto3";

import "Timestamp.proto";

message UpdateUacMemberRequest {
   Timestamp expirationTime = 1;
}
